if applied, resolves spacing issue with alert and error banners

--- a/src/scss/components/_error_or_state_banner.scss
+++ b/src/scss/components/_error_or_state_banner.scss
@@ -6,5 +6,7 @@
 
 .mcc-alert-banner {
   margin-top: -30px;
-  margin-bottom: -30px;
 }
+
+
+
