--- a/src/scss/components/_tab-navigation.scss
+++ b/src/scss/components/_tab-navigation.scss
@@ -21,10 +21,3 @@
 		display: block;
 	}
 }
-
-
-.case-tabs--two-thirds .moj-sub-navigation {
-  max-width: 66.666%;
-}
-
-
